--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -586,6 +586,18 @@ NEPS-nfs-Ctrl-Container-Kill-Jiva:
     - chmod 775 ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/NEPS-nfs-ctrl-container-kill/nfs-ctrl-container-kill
     - ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/NEPS-nfs-ctrl-container-kill/nfs-ctrl-container-kill
 
+NQ82-cStor-target-failure-replica-scaleup:
+  extends: .chaos_test_template
+  script:
+    - chmod 775 ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/NQ82-cStor-target-failure-new-replica-rebuild/target-failure-new-replica-rebuild
+    - ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/NQ82-cStor-target-failure-new-replica-rebuild/target-failure-new-replica-rebuild
+
+0Q4Q-Jiva-controller-failure-replica-scaleup:
+  extends: .chaos_test_template
+  script:
+    - chmod 775 ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/0Q4Q-Jiva-controller-failure-new-replica-rebuild/jiva-controller-failure-new-replica-rebuild
+    - ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/0Q4Q-Jiva-controller-failure-new-replica-rebuild/jiva-controller-failure-new-replica-rebuild
+     
 .infra_chaos_test_template:
   image: openebs/openshift-ci:latest
   stage: INFRA-CHAOS
