--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -604,6 +604,12 @@ NQ82-cStor-target-failure-replica-scaleup:
     - chmod 775 ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/0Q4Q-Jiva-controller-failure-new-replica-rebuild/jiva-controller-failure-new-replica-rebuild
     - ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/0Q4Q-Jiva-controller-failure-new-replica-rebuild/jiva-controller-failure-new-replica-rebuild
      
+F7BO-Jiva-Revision-Counter:
+  extends: .chaos_test_template
+  script:
+    - chmod 775 ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/F7BO-jiva-revision-counter/jiva-revision-counter
+    - ./Openshift-EE/pipelines/OpenEBS-base/stages/4-chaos/F7BO-jiva-revision-counter/jiva-revision-counter
+  
 .infra_chaos_test_template:
   image: openebs/openshift-ci:latest
   stage: INFRA-CHAOS
